[V4.5 R4.8] -
   11/01/21 /MK Bug Fix - uBankImport - SaveTransactions - Check to see if the BankCSVDetailTempTableDB.NomName field has a value, if not then use BankCSVTempTableDB.NomName.

[V4.5 R4.7] -
   16/12/20 /MK Additional Feature - MainUnit - Added the Bank Audit Trail to the reports page.
                                              - Increased the height of the More Reports hyperlink so that it would stand out.

[V4.5 R4.6] -
   13/11/20 /MK Change - MainUnit - FormActivate - Don't show BankLinkTimer anymore instead show BankLink select file screen and then show AppInfo and NewFeatures screen.
                                  - Bold the company name in the status bar - TGM request.    
   26/11/20 /MK Change - uDataBackup - FormCreate - If the user is an accountant then default the BackupFileName to the Cashbook directory name.
                       - uBankLinkNoFileFound - Added a "Don't show this again" option - Milo Murphy/Kieran Ryan.
                       - MainUnit - ShowBankLink - Only show TfmBankLinkNoFileFound if user hasn't ticked "Don't show this again".
                       - AccsData - CreatePreferenceDefaults - Default new ShowBankLinkFileNotFound pref to True so TfmBankLinkNoFileFound appears before user can press "Don't show this again".
                       - uPreferenceConsts - New const for ShowBankLinkFileNotFound.
   27/11/20 /MK Change - uSupplierDownload - FindVat - Instead of a straight OK message that goes in a loop, give the user the option to ignore and move past this transaction - Milo Murphy.
   30/11/20 /MK Change - uRestoreToNewCompanyName - Change char length of teNewCompanyName - TGM Request.

[V4.5 R4.5] -
   20/10/20 /MK Change - MainUnit, NewRepUnit - Changed the word log in credentials on the prompt that appears to Username and Password - TGM request.

[V4.5 R4.4] -
   19/10/20 /MK Change - uBankImport - Added conts for Transaction Type.