@@ -1,5 +1,8 @@
 [V4.5 R4.8] -
    11/01/21 /MK Bug Fix - uBankImport - SaveTransactions - Check to see if the BankCSVDetailTempTableDB.NomName field has a value, if not then use BankCSVTempTableDB.NomName.
+   11/01/21 /MK Bug Fix - uBankFileSelector - LoadBankFilesToGrid - Sort the MemData by CreationDate in Descending so that the grid starts in this order.
+                                                                    If we don't do this sort here then when the user highlights a file and clicks import,
+                                                                    the program switches to sort by name and the wrong file is imported.
 
 [V4.5 R4.7] -
    16/12/20 /MK Additional Feature - MainUnit - Added the Bank Audit Trail to the reports page.
